# mlops-energy

./: .gitignore  DEPLOYMENT.md  Makefile  README.md  energy-demand-mlops-spec.md  pyproject.toml  render.yaml  requirements.txt  start_api.bat  start_api.ps1  start_mlflow.bat  test_mlflow_timing.py  test_orchestration.py
.github/workflows/: data_ingestion.yml  drift_retrain.yml
.streamlit/: secrets.toml.template
data/processed/: features.parquet
data/reference/: reference_features.parquet
infra/: Dockerfile.api  docker-compose.yml
infra/postgres/: init.sql
infra/prometheus/: prometheus.yml
reports/: drift_results.json  performance_log.json
src/: __init__.py  config.py
src/dashboard/: __init__.py  app.py
src/data/: __init__.py  eia_client.py  feature_engineering.py  weather_client.py
src/model/: __init__.py  evaluate.py  predict.py  registry.py  train.py
src/monitoring/: __init__.py  drift_detection.py  html_templates.py  performance_monitor.py  prometheus_metrics.py
src/orchestration/: __init__.py  flows.py  tasks.py
src/scripts/: __init__.py  check_data_quality.py  check_drift.py  deploy_flows.py  monitor_performance.py  run_data_ingestion.py  run_drift_check.py  run_flows.py  run_predictions.py  run_retraining.py  test_prediction.py  train_model.py
src/serving/: __init__.py  app.py  schemas.py
